--- a/index.html
+++ b/index.html
@@ -19,3 +19,54 @@
         </ul>
     </div>
     <div class="timeline-container">
+        <div id="video-inicio" class="timeline-row">
+            <div class="timeline-left">
+                <div class="timeline-year">Início</div>
+                <div class="timeline-message">Este é o nosso lugar especial, onde tudo faz sentido.</div>
+                <iframe src="https://drive.google.com/file/d/1X_VQLCS5tC9uFb85kX_tUaf9mPxcP4fc/preview" allow="autoplay"></iframe>
+            </div>
+            <div class="timeline-center">
+                <div class="timeline-line"></div>
+                <div class="timeline-star">&#9733;</div>
+            </div>
+            <div class="timeline-right"></div>
+        </div>
+        <div id="video-encontro" class="timeline-row">
+            <div class="timeline-left"></div>
+            <div class="timeline-center">
+                <div class="timeline-line"></div>
+                <div class="timeline-star">&#9733;</div>
+            </div>
+            <div class="timeline-right">
+                <div class="timeline-year">Encontro</div>
+                <div class="timeline-message">Naquela noite, nossos caminhos finalmente se cruzaram.</div>
+                <iframe src="https://drive.google.com/file/d/1xhQldWl-ieb1xfKwr3U-4ZO3e_rUXr2b/preview" allow="autoplay"></iframe>
+            </div>
+        </div>
+        <div id="video-promessa" class="timeline-row">
+            <div class="timeline-left">
+                <div class="timeline-year">Promessa</div>
+                <div class="timeline-message">Quero ser tudo o que você precisar, hoje e sempre.</div>
+                <iframe src="https://drive.google.com/file/d/1kzvX8Hg9LZhqZoF7wA7BZQFUmwyN98ZE/preview" allow="autoplay"></iframe>
+            </div>
+            <div class="timeline-center">
+                <div class="timeline-line"></div>
+                <div class="timeline-star">&#9733;</div>
+            </div>
+            <div class="timeline-right"></div>
+        </div>
+        <div id="video-memorias" class="timeline-row">
+            <div class="timeline-left"></div>
+            <div class="timeline-center">
+                <div class="timeline-line"></div>
+                <div class="timeline-star">&#9733;</div>
+            </div>
+            <div class="timeline-right">
+                <div class="timeline-year">Memórias</div>
+                <div class="timeline-message">Memórias duram para sempre e é tudo que temos na vida.</div>
+                <iframe src="https://drive.google.com/file/d/1kJPaEbrGB4q1rssPXpUabWWf0P3byD-H/preview" allow="autoplay"></iframe>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
