--- a/index.html
+++ b/index.html
@@ -6,12 +6,138 @@
     <title>Timeline de Vídeos</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Nunito', sans-serif;
+            background: url('ceu-estrelado.jpeg') no-repeat center center fixed;
+            background-size: cover;
+            color: #fdf7f0;
+            margin: 0;
+            padding: 50px 0 0 0; /* Adicionei padding-top para compensar a altura da navbar */
+            min-height: 100vh;
+        }
+
+        .timeline-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            max-width: 800px;
+            margin: 60px auto;
+            position: relative;
+        }
+
+        .timeline-row {
+            display: flex;
+            align-items: center;
+            width: 100%;
+            margin-bottom: 40px;
+        }
+
+        .timeline-left, .timeline-right {
+            flex: 1;
+            max-width: 300px;
+            padding: 20px;
+        }
+
+        .timeline-center {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            position: relative;
+            width: 50px;
+        }
+
+        .timeline-line {
+            position: absolute;
+            width: 3px;
+            background-color: #fdf7f0;
+            top: 0;
+            height: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: -1;
+        }
+
+        .timeline-star {
+            font-size: 24px;
+            color: #fdf7f0;
+            margin: 20px 0;
+            z-index: 1;
+        }
+
+        .timeline-year {
+            font-size: 1.5em;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+
+        .timeline-message {
+            margin-bottom: 10px;
+        }
+
+        iframe {
+            width: 100%;
+            height: 200px;
+            border: none;
+            border-radius: 15px;
+        }
+
+        .navbar {
+            width: 100%;
+            background-color: transparent;
+            padding: 10px 0;
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 100;
+            display: flex;
+            justify-content: center;
+        }
+
+        .navbar ul {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar li {
+            margin: 0 30px;
+        }
+
+        .navbar a {
+            color: #fdf7f0;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1.2em;
+        }
+
+        .navbar a:hover { color: #dbb3d0;
+            transform: scale(1.1);
+            transition: transform 0.3s ease;
+        }
+
+        @media only screen and (max-width: 768px) {
+            iframe {
+                height: 150px;
+            }
+            .timeline-row {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+            .timeline-center {
+                margin-bottom: 20px;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="navbar">
-        <a href="#"><img src="Logo_site-removebg-preview.png" alt="Logo do Site" class="logo"></a>
-        <button class="hamburger-menu" id="hamburger-menu" aria-label="Menu">&#9776;</button>
-        <ul id="nav-links">
+        <a href="#"><img src="Logo_site-removebg-preview.png" alt="Logo do Site" style="height: 120px; margin-right: 20px; vertical-align: middle; transition: transform 0.3s ease, filter 0.3s ease;" onmouseover="this.style.transform='scale(1.1)';" onmouseout="this.style.transform='scale(1)';"></a>
+        <ul>
             <li><a href="#video-inicio">Início</a></li>
             <li><a href="#video-encontro">Encontro</a></li>
             <li><a href="#video-promessa">Promessa</a></li>
@@ -68,12 +194,5 @@
             </div>
         </div>
     </div>
-
-    <script>
-        document.getElementById("hamburger-menu").addEventListener("click", function() {
-            const navLinks = document.getElementById("nav-links");
-            navLinks.classList.toggle("show");
-        });
-    </script>
 </body>
 </html>
