--- a/index.html
+++ b/index.html
@@ -92,7 +92,19 @@
             left: 0;
             z-index: 100;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .navbar .logo {
+            height: 120px;
+            margin-left: 20px;
+            vertical-align: middle;
+            transition: transform 0.3s ease, filter 0.3s ease;
+        }
+
+        .navbar .logo:hover {
+            transform: scale(1.1);
         }
 
         .navbar ul {
@@ -115,29 +127,61 @@
             font-size: 1.2em;
         }
 
-        .navbar a:hover { color: #dbb3d0;
+        .navbar a:hover {
+            color: #dbb3d0;
             transform: scale(1.1);
             transition: transform 0.3s ease;
         }
 
+        .hamburger {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+            margin-right: 20px;
+        }
+
+        .hamburger div {
+            width: 25px;
+            height: 3px;
+            background-color: #fdf7f0;
+            margin: 3px 0;
+        }
+
         @media only screen and (max-width: 768px) {
-            iframe {
-                height: 150px;
-            }
-            .timeline-row {
+            .navbar ul {
+                display: none;
                 flex-direction: column;
-                align-items: flex-start;
+                width: 100%;
+                background-color: rgba(0, 0, 0, 0.8);
+                position: absolute;
+                top: 100%;
+                left: 0;
+                padding: 20px 0;
             }
-            .timeline-center {
-                margin-bottom: 20px;
+
+            .navbar ul.show {
+                display: flex;
+            }
+
+            .navbar li {
+                margin: 10px 0;
+            }
+
+            .hamburger {
+                display: flex;
             }
         }
     </style>
 </head>
 <body>
     <div class="navbar">
-        <a href="#"><img src="Logo_site-removebg-preview.png" alt="Logo do Site" style="height: 120px; margin-right: 20px; vertical-align: middle; transition: transform 0.3s ease, filter 0.3s ease;" onmouseover="this.style.transform='scale(1.1)';" onmouseout="this.style.transform='scale(1)';"></a>
-        <ul>
+        <a href="#"><img src="Logo_site-removebg-preview.png" alt="Logo do Site" class="logo"></a>
+        <div class="hamburger" onclick="toggleMenu()">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <ul id="navbar-links">
             <li><a href="#video-inicio">Início</a></li>
             <li><a href="#video-encontro">Encontro</a></li>
             <li><a href="#video-promessa">Promessa</a></li>
@@ -190,9 +234,4 @@
             <div class="timeline-right">
                 <div class="timeline-year">Memórias</div>
                 <div class="timeline-message">Memórias duram para sempre e é tudo que temos na vida.</div>
-                <iframe src="https://drive.google.com/file/d/1kJPaEbrGB4q1rssPXpUabWWf0P3byD-H/preview" allow="autoplay"></iframe>
-            </div>
-        </div>
-    </div>
-</body>
-</html>
+                <iframe src="https://drive.google.com/file/d/1kJPaEbrGB4q1rssPXpUabWWf0P3byD
