--- a/index.html
+++ b/index.html
@@ -231,7 +231,13 @@
                 <div class="timeline-line"></div>
                 <div class="timeline-star">&#9733;</div>
             </div>
-            <div class="timeline-right">
-                <div class="timeline-year">Memórias</div>
-                <div class="timeline-message">Memórias duram para sempre e é tudo que temos na vida.</div>
-                <iframe src="https://drive.google.com/file/d/1kJPaEbrGB4q1rssPXpUabWWf0P3byD
+<div class="timeline-right">
+    <div class="timeline-year">Memórias</div>
+    <div class="timeline-message">Memórias duram para sempre e é tudo que temos na vida.</div>
+    <iframe src="https://drive.google.com/file/d/1kJPaEbrGB4q1rssPXpUabWWf0P3byD-H/preview" allow="autoplay"></iframe>
+</div>
+<!-- Fechamento da timeline-container e outros elementos do corpo -->
+
+<script src="script.js"></script>
+</body>
+</html>
