--- a/index.html
+++ b/index.html
@@ -174,14 +174,14 @@
     </style>
 </head>
 <body>
-    <div class="navbar">
+      <div class="navbar">
         <a href="#"><img src="Logo_site-removebg-preview.png" alt="Logo do Site" class="logo"></a>
         <div class="hamburger" onclick="toggleMenu()">
             <div></div>
             <div></div>
             <div></div>
         </div>
-        <ul id="navbar-links">
+        <ul id="navbar-links" class="mobile">
             <li><a href="#video-inicio">Início</a></li>
             <li><a href="#video-encontro">Encontro</a></li>
             <li><a href="#video-promessa">Promessa</a></li>
